--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -10,7 +10,7 @@ editor_options:
 
 The following website details the statistical analysis for the forthcoming paper "TITLE HERE" by Garlovsky et al.
 
-### [1. Analysis of **Juvenile Development time**](juvenile_development.html)
+### [1. Analysis of **juvenile development time**](juvenile_development.html)
 
 ### [2. Analysis of **desiccation and starvation resistance**](resistance.html)
 
